# genai-app-python

./: .cursorrules  .env.dd-trace  .env.example  .gitignore  .pre-commit-config.yaml  ADK_STREAMING_RESEARCH.md  AGENTS.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTH_FIX_SUMMARY.md  AUTH_SIMPLIFICATION_SUMMARY.md  BACKEND_AUTH_REMOVED.md  BLACK_FORMATTING_SETUP.md  BUILD_TEST_REPORT.md  CODE_QUALITY_ACTION_PLAN.md  CODE_QUALITY_REVIEW.md  COMMIT_REVIEW.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_INVESTIGATION_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  CRITICAL_FIXES_COMPLETE.md  CURRENT_PLAN_REVIEW.md  CURSOR_COMMANDS.md  DATADOG_BLOGGER_SUMMARY.md  DATADOG_CONTENT_CREATOR_PROGRESS.md  DATADOG_INVESTIGATION_SUMMARY.md  DATADOG_LLMOBS_LOCAL_SETUP.md  DATADOG_RUM_QUICKSTART.md  DATADOG_TRACE_AGENT_CONFIG.md  DEPLOYMENT_OPTIMIZATION_SUMMARY.md  DOCKER_BUILD_FIX.md  DOCKER_COMPOSE_TEST.md  DOCKER_TESTING_GUIDE.md  DOCKER_TEST_SUCCESS.md  DOCUMENTATION_MAP.md  DOCUMENTATION_SUMMARY.md  FIX_CI_FORMATTING.md  FRONTEND_IMAGE_URL_FIX.md  GEMINI_3_PRO_IMAGE_SPECS.md  GEMINI_IMAGE_PERMISSION_FIX.md  GITHUB_ACTIONS_QUICKSTART.md  (+37 more)
.git-hooks/: README.md  pre-commit
.github/: README.md
assets/: README.md
docs/: DATADOG_BILLING_BILLABLE_UNITS.md  INDEX.md  NAVIGATION.md  README.md
frontend/streamlit/: .gcloudignore  DATASET_MANAGER_QUICKSTART.md  Dockerfile  README.md  app.py  cloudbuild.yaml  pyproject.toml  requirements.txt  setup.sh
frontend/streamlit/.streamlit/: config.toml  secrets.toml.example
frontend/streamlit/components/: feedback.py
frontend/streamlit/pages/: 0_🏠_Home.py  1_🗳️_Vote_Extractor.py  2_📊_Dataset_Manager.py  3_🧪_Run_Experiments.py  4_📄_Single_File_Extractor.py  5_📦_Batch_Extractor.py
frontend/streamlit/utils/: __init__.py  bigquery_client.py  config.py  datadog_rum.py  feedback_api.py  gemini_extractor.py  models.py
k8s/: datadog-values.yaml  dd-log-size-test-job.yaml
notebooks/: .env.example  EVALUATION_GUIDE.md  README-pdf-extractor.md  README.md  SCHEMA_COMPARISON.md  SCHEMA_UPDATES.md  TEST_FILE_INFO.md  dd-llmobs-trace-extractor.ipynb  ect-drive-extractor.ipynb  election-extraction-experiments.ipynb  gemini-ss5_18_bigquery_drive.ipynb  gemini-ss5_18_pdf_extractor.ipynb  google-vertex-genai.ipynb  requirements-pdf-extractor.txt  ss6-1-extraction-experiments.ipynb  (+1 more)
scripts/: docker-build.sh  (+9 more)
services/adk-content-creator/: Dockerfile  Dockerfile.cloudrun  H2C_TEST_RESULTS.md  HTTP2_SETUP.md  README.md  pyproject.toml
services/adk-content-creator/app/: __init__.py  config.py  main.py
services/adk-content-creator/app/api/v1/endpoints/: generate.py  upload.py
services/adk-content-creator/app/core/: artifact_service.py  file_storage.py  media_utils.py
services/adk-content-creator/app/models/: blog_post.py  content_input.py  social_post.py  upload_response.py  video_script.py
services/adk-content-creator/app/services/: gemini_service.py
services/adk-python/: .gitignore  ADK_AGENTS_COMPLETE.md  ADK_AGENT_ARCHITECTURE.md  ADK_FULL_IMPLEMENTATION.md  ADK_MIGRATION_COMPLETE.md  AGENT_ARCHITECTURE.md  ARCHITECTURE_SIMPLIFIED.md  AUTHENTICATION.md  AUTO_INSTRUMENTATION_VERIFIED.md  BUILD_TEST_COMPLETE.md  DATADOG_LLMOBS_SETUP.md  DATADOG_SOURCE_CODE_INTEGRATION.md  DIRECTORY_STRUCTURE.md  Dockerfile  Dockerfile.cloudrun  FULL_ADK_ACTIVATED.md  IMAGE_CREATOR_AGENT.md  IMAGE_GENERATION_FEATURE.md  INLINE_DATA_HANDLING.md  LIST_APPS_FIXED.md  TEST_RESULTS.md  main_adk.py  pyproject.toml  test_streaming.py
services/adk-python/app/: __init__.py  config.py  main.py
services/adk-python/app/api/v1/endpoints/: generate.py  upload.py
services/adk-python/app/core/: artifact_service.py  file_storage.py  media_utils.py
services/adk-python/app/models/: blog_post.py  content_input.py  social_post.py  upload_response.py  video_script.py
services/adk-python/app/services/: __init__.py  auth.py  gemini_service.py  image_generation.py
services/adk-python/app/utils/: __init__.py  iap_logger.py
services/adk-python/content_creator_agent/: ADK_PYTHON_RENAME_COMPLETE.md  __init__.py  agent.py  config.py  loop_agents.py  tools.py  validation_tools.py
services/adk-python/content_creator_agent/sub_agents/: __init__.py  blog_editor.py  blog_planner.py  blog_writer.py  image_generator.py  social_media_writer.py  video_script_writer.py
services/adk-python/content_creator_agent/tools/: __init__.py  image_generation.py
services/adk-python/image_creator/: __init__.py  agent.py  config.py
services/adk-python/image_creator/tools/: __init__.py  image_tools.py
services/adk-python/image_creator_agent/: __init__.py  agent.py
services/adk-python/image_creator_agent/tools/: __init__.py  image_tools.py
services/fastapi-backend/: .dockerignore  .gcloudignore  Dockerfile  Dockerfile.cloudrun  README.md  cloudbuild-with-datadog.yaml  cloudbuild.yaml  pyproject.toml  requirements.txt
services/fastapi-backend/app/: __init__.py  config.py  main.py
services/fastapi-backend/app/api/v1/: router.py
services/fastapi-backend/app/api/v1/endpoints/: chat.py  experiments.py  feedback.py  generate.py  health.py  vote_extraction.py
services/fastapi-backend/app/core/: __init__.py  constants.py  exceptions.py  logging.py  rate_limiting.py  security.py  utils.py
services/fastapi-backend/app/models/: __init__.py  experiments.py  feedback.py  requests.py  responses.py  vote_extraction.py
services/fastapi-backend/app/services/: __init__.py  experiments_service.py  feedback_service.py  genai_service.py  vertex_ai.py  vote_extraction_service.py
services/fastapi-backend/app/tests/: README.md  __init__.py  conftest.py
services/fastapi-backend/app/tests/integration/: test_api_health.py  test_api_vote_extraction.py
services/fastapi-backend/app/tests/test_api/: test_health.py
services/fastapi-backend/app/tests/unit/: test_config.py  test_constants.py  test_exceptions.py  test_models.py  test_security.py
services/fastapi-backend/scripts/: start.sh
services/fastapi-backend/tests/: test_experiments_endpoints.py  test_experiments_models.py  test_experiments_service.py  test_feedback.py
(+277 files in other folders)
