[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend with Google Vertex AI integration"
authors = [
    {name = "Nuttee", email = "nuttea@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "google-cloud-aiplatform>=1.42.1",
    "google-auth>=2.27.0",
    "google-genai>=0.2.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "python-json-logger>=2.0.7",
    "structlog>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "ddtrace>=4.0.0",
    "opentelemetry-api>=1.20.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "N", "W", "B", "C4", "UP"]  # Removed "I" to avoid conflict with isort
ignore = [
    "E501",   # Line too long (handled by Black for code, strings are okay)
    "UP007",  # Use X | Y for type annotations (not critical for Python 3.11)
    "B008",   # Function call in argument defaults (FastAPI pattern)
    "B904",   # Exception chaining (can be added later)
    "N818",   # Exception naming (existing convention)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
